# Info_2

./: CMakeLists.txt  task_1.c  task_2.c  task_3.c  task_4.c  test.c
Ex_1/: task_2.c  task_3.c  task_5.c
Ex_2/: task3.c  task_1.c  task_2.c  task_3.c  task_3_part1.c  task_4  task_5
Ex_7/: QueueADT.c  Stack.c
Ex_8/: BST.c
