cmake_minimum_required(VERSION 3.5)

project(Info_2)

set(CMAKE_C_STANDARD 99)


#add_executable(Info_2 Ex_1/task_1.c)
#add_executable(task_2 Ex_1/task_2.c)
#add_executable(task_3 Ex_1/task_3.c)
#add_executable(task_4 Ex_1/task_4.c)
#add_executable(task_5 Ex_1/task_5.c)



add_executable(task_1 Ex_2/task_1.c)
add_executable(task_2 Ex_2/task_2.c)

add_executable(task3 Ex_2/task3.c)
add_executable(task_3_part1 Ex_2/task_3_part1.c)